--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,2 +1,16 @@
-<h1>Bem-vindo à minha página inicial</h1>
-<p>Esta é a minha primeira página em Angular. Estou muito animado para começar a construir algo incrível!</p>
+
+  <nav>
+  <ul>
+    <li *ngFor="let menuItem of menuItems">
+      <a routerLink="{{ menuItem.path }}" routerLinkActive="active">{{ menuItem.label }}</a>
+    </li>
+  </ul>
+</nav>
+
+<!-- app-menu.component.html -->
+<!--<nav>
+  <ul>
+    <li><a routerLink="/" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">Página Inicial</a></li>
+    <li><a routerLink="/about" routerLinkActive="active">Sobre Mim</a></li>
+  </ul>
+</nav>-->
