--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,16 +1,16 @@
-
-  <nav>
+<!--
+<nav>
   <ul>
     <li *ngFor="let menuItem of menuItems">
       <a routerLink="{{ menuItem.path }}" routerLinkActive="active">{{ menuItem.label }}</a>
     </li>
   </ul>
 </nav>
-
+-->
 <!-- app-menu.component.html -->
-<!--<nav>
+<nav>
   <ul>
     <li><a routerLink="/" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">Página Inicial</a></li>
     <li><a routerLink="/about" routerLinkActive="active">Sobre Mim</a></li>
   </ul>
-</nav>-->
+</nav>
