Feat: Adicionado curriculo e descrição sobre mim Refactor: Criado componente navbar responsavel pela barra de menu

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,6 +1,8 @@
-<nav>
-  <ul>
-    <li><a routerLink="/" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">Página Inicial</a></li>
-    <li><a routerLink="/about" routerLinkActive="active">Sobre Mim</a></li>
-  </ul>
-</nav>
+<app-navbar></app-navbar>
+<div class="about-text">
+  <p>Iuri Bruning Negherbon é Analista na TOTVS, adora desenvolver softwares e faz parte da equipe TOTVS há 7 anos.
+    Entrou como estagiário em julho de 2015, após terminar o Ensino Médio e começar a Faculdade de Engenharia de Computação na UNISOCIESC. Atuou principlamente com o SARA, utilizando ferramentas como Delphi e SQL Server 2007. Também aprendeu ADVPL para auxiliar demandas do time.
+    Em 2017, no final do estagio, continuou na TOTVS como Técnico de Desenvolvimento de Software, adquirindo mais conhecimento com desenvolvimento e com mais responsabilidade. Participou de projetos de customização junto ao time, onde houve necessidade de desenvolvimento de apis para comunicação com outros sistemas dos clientes.
+    Em 2021, agora como Analista de Desenvolvimento de Software, desenvolve no SARA, DCL e Protheus, utilizando o Delphi, ADVPL e SQL Server 2007/2016 (criando procedures, triggers e selects em geral). Se comunica com os clientes para tentar entender melhor suas necessidades e conseguir identificar uma solução em conjunto.</p>
+  <a class="github" href="https://github.com/IuriBNegherbon">Meu github</a>
+</div>
