--- a/src/app/about/about.component.css
+++ b/src/app/about/about.component.css
@@ -1,29 +1,11 @@
-nav {
-  background-color: #333;
-  color: #fff;
-}
-
-ul {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-}
-
-li {
-  display: inline-block;
-}
-
-a {
-  display: block;
-  color: #fff;
-  padding: 10px;
-  text-decoration: none;
-}
-
-a:hover {
-  background-color: #555;
-}
-
-.active {
-  background-color: #555;
+.about-text {
+  font-family: 'Helvetica Neue', sans-serif;
+  font-size: 20px;
+  line-height: 1.4;
+  color: #555;
+  text-align: justify;
+  padding: 20px;
+  background-color: #f9f9f9;
+  border-radius: 10px;
+  box-shadow: 0px 0px 10px #ccc;
 }
