Feat: Adicionado uma Calculadora de Milhas

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,6 +1,7 @@
 <nav>
   <ul>
     <li><a class="routerLink" routerLink="/" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">Página Inicial</a></li>
+    <li><a class="routerLink" routerLink="/milhas" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">Calculadora de milhas</a></li>
     <li><a class="routerLink" routerLink="/about" routerLinkActive="active">Sobre Mim</a></li>
   </ul>
 </nav>
