--- a/src/app/milhas/milhas.component.css
+++ b/src/app/milhas/milhas.component.css
@@ -1,27 +1,36 @@
 /* milhas.component.css */
 .container {
-  display: table;
-  margin: 0px;
-  border-collapse: collapse;
+  display: flex;
+  flex-direction: column;
+  margin: 20px;
+  border: 1px solid #ccc;
+  padding: 20px;
+  border-radius: 5px;
 }
 
 .container label,
 .container input {
-  display: table-cell;
-  padding: 5px;
+  margin-bottom: 10px;
+  padding: 10px;
   border: 1px solid #ccc;
+  border-radius: 5px;
+  display: inline-block;
+  vertical-align: middle;
 }
 
 .container label {
-  text-align: center;
+  font-weight: bold;
+  margin-right: 10px;
 }
 
 .container input {
-  width: 100%;
+  width: 100px;
+  box-sizing: border-box;
 }
 
 .container p {
-  margin: 5px;
+  margin-top: 10px;
+  font-weight: bold;
 }
 
 .container::after {
