--- a/src/app/milhas/milhas.component.css
+++ b/src/app/milhas/milhas.component.css
@@ -1,40 +1,25 @@
-/* milhas.component.css */
-.container {
+.tabela {
   display: flex;
   flex-direction: column;
-  margin: 20px;
+  margin: 50px;
   border: 1px solid #ccc;
   padding: 20px;
   border-radius: 5px;
 }
 
-.container label,
+table {
+  float: left;
+  margin-right: 10px;
+}
+
+/*.container label,*/
 .container input {
   margin-bottom: 10px;
   padding: 10px;
   border: 1px solid #ccc;
   border-radius: 5px;
-  display: inline-block;
-  vertical-align: middle;
 }
 
-.container label {
-  font-weight: bold;
-  margin-right: 10px;
-}
-
-.container input {
-  width: 100px;
-  box-sizing: border-box;
-}
-
-.container p {
-  margin-top: 10px;
-  font-weight: bold;
-}
-
-.container::after {
-  content: "";
-  display: table;
-  clear: both;
+h2{
+  margin-left: 153px;
 }
