--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -11,5 +11,6 @@
     </li>
     <li><a class="routerLink" routerLink="/apigithub" routerLinkActive="active">Api GitHub</a></li>
     <li><a class="routerLink" routerLink="/about" routerLinkActive="active">Sobre Mim</a></li>
+    <li><a class="routerLink" routerLink="/login" routerLinkActive="active">Login</a></li>
   </ul>
 </nav>
