--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -40,6 +40,8 @@
 
   <!-- Google api -->
   <script src="https://apis.google.com/js/api:client.js"></script>
+  <script src="https://apis.google.com/js/platform.js" async defer></script>
+
 
   <!--JQuery e Bootstrap - Não são obrigatórios para ao autenticação -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
