Criação da tela de Controle Mensal

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -10,6 +10,7 @@
       </div>
     </li>
     <li><a class="routerLink" routerLink="/apigithub" routerLinkActive="active">Api GitHub</a></li>
+    <li><a class="routerLink" routerLink="/controlemensal" routerLinkActive="active">Controle Mensal</a></li>
     <li><a class="routerLink" routerLink="/about" routerLinkActive="active">Sobre Mim</a></li>
   </ul>
 </nav>
