--- a/src/app/controle-mensal/controle-mensal.component.html
+++ b/src/app/controle-mensal/controle-mensal.component.html
@@ -3,52 +3,10 @@
 <div class="container-fluid mt-5">
   <div class="row mb-4">
     <div class="col">
-      <h2>Adicionar Novo Registro</h2>
+      <h2>Controle de Registros</h2>
     </div>
   </div>
 
-  <form (ngSubmit)="adicionarRegistro()" class="needs-validation" novalidate>
-    <div class="row">
-      <div class="form-group">
-        <label for="operacao">Operação:</label>
-        <select class="form-control" id="operacao" [(ngModel)]="operacao" name="operacao" required>
-          <option value="" disabled>Selecione uma opção</option>
-          <option value="ENTRADA">ENTRADA</option>
-          <option value="SAIDA">SAÍDA</option>
-        </select>
-      </div>
-
-      <div class="col-md-6 mb-3">
-        <label for="descricao">Descrição:</label>
-        <input type="text" class="form-control" id="descricao" [(ngModel)]="descricao" name="descricao" required />
-      </div>
-
-      <div class="col-md-6 mb-3">
-        <label for="agrupador1">Agrupador 1:</label>
-        <input type="text" class="form-control" id="agrupador1" [(ngModel)]="agrupador1" name="agrupador1" required />
-      </div>
-
-      <div class="col-md-6 mb-3">
-        <label for="agrupador2">Agrupador 2:</label>
-        <input type="text" class="form-control" id="agrupador2" [(ngModel)]="agrupador2" name="agrupador2" required />
-      </div>
-
-      <div class="col-md-6 mb-3">
-        <label for="data">Data:</label>
-        <input type="date" class="form-control" id="data" [(ngModel)]="data" name="data" required />
-      </div>
-
-      <div class="col-md-6 mb-3">
-        <label for="valor">Valor:</label>
-        <input type="number" class="form-control" id="valor" [(ngModel)]="valor" name="valor" required />
-      </div>
-    </div>
-
-    <button type="submit" class="btn btn-primary">Adicionar</button>
-  </form>
-</div>
-
-<div class="container-fluid mt-5">
   <div class="row mb-4">
     <div class="col">
       <button class="btn btn-info" (click)="aplicarFiltro('semanal')">Semanal</button>
@@ -56,18 +14,32 @@
     </div>
   </div>
 
-  <div class="row mb-4">
-    <div class="col">
-      <div *ngIf="totalEntrada !== undefined && totalSaida !== undefined && totalDiferenca !== undefined">
-        <h4>Totais</h4>
-        <p><strong>Total Entrada:</strong> {{ totalEntrada | currency }}</p>
-        <p><strong>Total Saída:</strong> {{ totalSaida | currency }}</p>
-        <p><strong>Total Diferença:</strong> {{ totalDiferenca | currency }}</p>
-      </div>
-    </div>
+  <div>
+    <table class="table table-striped">
+      <thead>
+        <tr>
+          <th>Saldo:</th>
+          <th>Total Entrada:</th>
+          <th>Total Saída:</th>
+        </tr>
+      </thead> 
+      <tbody>
+        <tr>
+          <td>
+            {{ totalDiferenca | currency }}
+          </td>
+          <td>
+            {{ totalEntrada | currency }}
+          </td>
+          <td>
+            {{ totalSaida | currency }}
+          </td>
+        </tr>
+      </tbody>
+    </table> 
   </div>
 
-  <div *ngIf="registros.length">
+  <div>
     <table class="table table-striped">
       <thead>
         <tr>
@@ -81,6 +53,137 @@
         </tr>
       </thead>
       <tbody>
+        <!-- Linha para adicionar novo registro -->
+        <tr>
+          <td>
+            <select class="form-control" [(ngModel)]="novoRegistro.operacao" required>
+              <option value="" disabled>Selecione</option>
+              <option value="ENTRADA">ENTRADA</option>
+              <option value="SAIDA">SAÍDA</option>
+            </select>
+          </td>
+          <td>
+            <input type="text" class="form-control" [(ngModel)]="novoRegistro.descricao" required />
+          </td>
+          <td>
+            <input type="text" class="form-control" [(ngModel)]="novoRegistro.agrupador1" required />
+          </td>
+          <td>
+            <input type="text" class="form-control" [(ngModel)]="novoRegistro.agrupador2" required />
+          </td>
+          <td>
+            <input type="date" class="form-control" [(ngModel)]="novoRegistro.data" required />
+          </td>
+          <td>
+            <input type="number" class="form-control" [(ngModel)]="novoRegistro.valor" required />
+          </td>
+          <td>
+            <button class="btn btn-success" (click)="adicionarRegistro()">Adicionar</button>
+          </td>
+        </tr>
+        
+        <!-- Linhas existentes -->
+        <tr *ngFor="let registro of registros; let i = index">
+          <td>{{ registro.operacao }}</td>
+          <td>
+            <ng-container *ngIf="editIndex === i; else viewModeDescricao">
+              <input type="text" [(ngModel)]="registro.descricao" class="form-control" />
+            </ng-container>
+            <ng-template #viewModeDescricao>
+              {{ registro.descricao }}
+            </ng-template>
+          </td>
+          <td>
+            <ng-container *ngIf="editIndex === i; else viewModeAgrupador1">
+              <input type="text" [(ngModel)]="registro.agrupador1" class="form-control" />
+            </ng-container>
+            <ng-template #viewModeAgrupador1>
+              {{ registro.agrupador1 }}
+            </ng-template>
+          </td>
+          <td>
+            <ng-container *ngIf="editIndex === i; else viewModeAgrupador2">
+              <input type="text" [(ngModel)]="registro.agrupador2" class="form-control" />
+            </ng-container>
+            <ng-template #viewModeAgrupador2>
+              {{ registro.agrupador2 }}
+            </ng-template>
+          </td>
+          <td>
+            <ng-container *ngIf="editIndex === i; else viewModeData">
+              <input type="date" [(ngModel)]="registro.data" class="form-control" />
+            </ng-container>
+            <ng-template #viewModeData>
+              {{ registro.data }}
+            </ng-template>
+          </td>
+          <td>
+            <ng-container *ngIf="editIndex === i; else viewModeValor">
+              <input type="number" [(ngModel)]="registro.valor" class="form-control" />
+            </ng-container>
+            <ng-template #viewModeValor>
+              {{ registro.valor | currency }}
+            </ng-template>
+          </td>
+          <td>
+            <ng-container *ngIf="editIndex === i">
+              <button class="btn btn-success" (click)="salvarEdicao(registro)">Salvar</button>
+              <button class="btn btn-secondary ml-2" (click)="cancelarEdicao()">Cancelar</button>
+            </ng-container>
+            <ng-container *ngIf="editIndex !== i">
+              <button class="btn btn-primary" (click)="editarRegistro(i)">Editar</button>
+              <button class="btn btn-danger ml-2" (click)="excluirRegistro(registro.id)">Excluir</button>
+            </ng-container>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+
+  <div>
+    <table class="table table-striped">
+      <thead>
+        <tr>
+          <th>Operação</th>
+          <th>Descrição</th>
+          <th>Agrupador1</th>
+          <th>Agrupador2</th>
+          <th>Data</th>
+          <th>Valor</th>
+          <th>Ações</th>
+        </tr>
+      </thead>
+      <tbody>
+        <!-- Linha para adicionar novo registro -->
+        <tr>
+          <td>
+            <select class="form-control" [(ngModel)]="novoRegistro.operacao" required>
+              <option value="" disabled>Selecione</option>
+              <option value="ENTRADA">ENTRADA</option>
+              <option value="SAIDA">SAÍDA</option>
+            </select>
+          </td>
+          <td>
+            <input type="text" class="form-control" [(ngModel)]="novoRegistro.descricao" required />
+          </td>
+          <td>
+            <input type="text" class="form-control" [(ngModel)]="novoRegistro.agrupador1" required />
+          </td>
+          <td>
+            <input type="text" class="form-control" [(ngModel)]="novoRegistro.agrupador2" required />
+          </td>
+          <td>
+            <input type="date" class="form-control" [(ngModel)]="novoRegistro.data" required />
+          </td>
+          <td>
+            <input type="number" class="form-control" [(ngModel)]="novoRegistro.valor" required />
+          </td>
+          <td>
+            <button class="btn btn-success" (click)="adicionarRegistro()">Adicionar</button>
+          </td>
+        </tr>
+        
+        <!-- Linhas existentes -->
         <tr *ngFor="let registro of registros; let i = index">
           <td>{{ registro.operacao }}</td>
           <td>
